src/objects/Security_Clearance__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Security Clearances</relationshipLabel>
        <relationshipName>Security_Clearances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Secret</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Top-Secret</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Furthest_DD254_End_Date__c</fullName>
        <label>Furthest DD254 End Date</label>
        <summarizedField>DD_254__c.JPAS_End_Date__c</summarizedField>
        <summaryForeignKey>DD_254__c.Security_Clearance__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_DD254__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has DD254</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigation_Begin_Date__c</fullName>
        <label>Investigation Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation_End_Date__c</fullName>
        <label>Investigation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MBO_Status__c</fullName>
        <label>MBO Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debriefed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Security Clearance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Classification__c</columns>
        <columns>MBO_Status__c</columns>
        <columns>Investigation_Begin_Date__c</columns>
        <columns>Investigation_End_Date__c</columns>
        <columns>Activation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Security Clearance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Clearances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Begin_and_End_Date_Required_if_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(MBO_Status__c, &apos;Active&apos;),
    OR(ISBLANK(Investigation_Begin_Date__c),
       ISBLANK(Investigation_End_Date__c)
    )
)</errorConditionFormula>
        <errorMessage>Please set the Investigation Begin and End Dates to activate the Security Clearance.</errorMessage>
    </validationRules>
</CustomObject>